--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,9 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       env:
-         node_version : ${{secrets.NODE_VERSION}}
+         NODE_VERSION : ${{secrets.NODE_VERSION}}
       with:
-        node-version: "$node_version"
+        node-version: "$NODE_VERSION"
 
     - name: Install dependencies
       run: npm install
