--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       env:
          NODE_VERSION : ${{secrets.NODE_VERSION}}
       with:
-        node-version: "$NODE_VERSION"
+        node-version: $NODE_VERSION
 
     - name: Install dependencies
       run: npm install
