--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,8 @@ jobs:
         node-version: ${{env.NODE_VER}}
 
     - name: Install dependencies
-      run: npm install
-
+      run: | 
+         npm install
+         echo "$GITHUB_REF"
     - name: Run tests
       run: npm test
