--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,6 @@ jobs:
     - name: Install dependencies
       run: | 
          npm install
-         echo "$GITHUB_REF"
+         echo "$GITHUB_WORKFLOW $GITHUB_REF"
     - name: Run tests
       run: npm test
