--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,11 +4,11 @@ on:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
-      Run Type:
+      type:
         # Friendly description to be shown in the UI instead of 'name'
         description: 'Type of Run'
         # Default value if no value is explicitly provided
-        default: 'demo'
+        default: 'none'
         # Input has to be provided for the workflow to run
         required: false
         # The data type of the input
@@ -33,5 +33,6 @@ jobs:
       run: | 
          npm install
          echo "$GITHUB_WORKFLOW $GITHUB_REF"
+         echo run is a ${{ github.event.inputs.type }}
     - name: Run tests
       run: npm test
