--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,6 @@ jobs:
       id: test_result
       run: |
          results=$(npm test | grep Tests)
-         echo "::set-output name=TEST_RESULT::$results"
+         echo "name=TEST_RESULT::$results" >> $GITHUB_OUTPUT
          echo "steps.test_result.outputs.TEST_RESULT"
      
