--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,5 +40,10 @@ jobs:
     - name: Get NodeJS Version
       id: nodeversion
       run: |
+        curl -L \
+        -H "Accept: application/vnd.github+json" \
+        -H "Authorization: Bearer <YOUR-TOKEN>" \
+        -H "X-GitHub-Api-Version: 2022-11-28" \
+        https://api.github.com/orgs/bhanuraina/actions/permissions
         echo "name=version::$(node --version)" >> $GITHUB_OUTPUT    
      
