--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,9 @@ jobs:
     
 
     steps:
+    - name: check exiting run
+      run: |
+          sh check_job.sh
     - name: Checkout code
       uses: actions/checkout@v2
 
