--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
     - name: check exiting run
       run: |
-          sh check_job.sh
+          sh ${GITHUB_ACTION_PATH}/check_job.sh
     - name: Checkout code
       uses: actions/checkout@v2
 
