--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -11,4 +11,9 @@ jobs:
     name: Test Step
     runs-on: ubuntu-latest
     steps:
-      - run: env
+      - run: |
+          curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{secrets.PAT}}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/bhanuraina/test_nodejs/actions/runs
