--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,5 +51,24 @@ jobs:
         -H "Authorization: Bearer ${{secrets.PAT}} " \
         -H "X-GitHub-Api-Version: 2022-11-28" \
         https://api.github.com/orgs/bhanuraina/actions/permissions
-        echo "name=version::$(node --version)" >> $GITHUB_OUTPUT    
+        echo "name=version::$(node --version)" >> $GITHUB_OUTPUT   
+ # Setup robotfw to run tests
+    - name: Robotframework setup
+      uses: telia/vibu-actions/common/robotfw-setup@v1.1.4
+      id: robot-setup
+      if: ${{ hashFiles(inputs.robot_test_path) != '' }}
+      with:
+          requirements_path: ${{ inputs.robot_requirements_path }}
+
+      # run tests
+    - name: Tests - run tests osix
+      id: tests
+      if: ${{ hashFiles(inputs.robot_test_path) != '' }}
+      run: |
+        results_dir="${GITHUB_JOB}-${GITHUB_RUN_NUMBER}_$(date +%Y%m%d-%H%M%S)"
+        echo "results_dir=$results_dir" >> $GITHUB_ENV
+        robot --outputdir ${results_dir} ${{ inputs.robot_test_path }} \
+          && echo "result=true" >> $GITHUB_OUTPUT \
+          || echo "result=false" >> $GITHUB_OUTPUT
+    
      
