--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,11 @@ on:
         required: false
         # The data type of the input
         type: string
+      robot_test_path:
+        description: Path to robotframework test files to be run.
+        type: string
+        required: false
+        default: ./robot-tests
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: false
