--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
       run: |
         results_dir="${GITHUB_JOB}-${GITHUB_RUN_NUMBER}_$(date +%Y%m%d-%H%M%S)"
         echo "results_dir=$results_dir" >> $GITHUB_ENV
-        robot --variable MySecret:${{secrets.PAT}} --outputdir ${results_dir} ${{ inputs.robot_test_path }} \
+        robot --variable my_secret:${{secrets.PAT}} --outputdir ${results_dir} ${{ inputs.robot_test_path }} \
           && echo "result=true" >> $GITHUB_OUTPUT \
           || echo "result=false" >> $GITHUB_OUTPUT
     
