--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -2,10 +2,10 @@ name: Test
 
 on:
   workflow_dispatch:
-  workflow_run:
-    workflows: [NodeCI]
-    types:
-      - completed
+  #workflow_run:
+    #workflows: [NodeCI]
+    #types:
+      #- completed
 
 jobs:
   test-job:
