--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -12,13 +12,13 @@ jobs:
     name: Test Step
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          curl -L \
-          -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/bhanuraina/test_nodejs/actions/runs
-          steps:
+      #- run: |
+       #   curl -L \
+       #   -H "Accept: application/vnd.github+json" \
+        #  -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
+         # -H "X-GitHub-Api-Version: 2022-11-28" \
+          #  https://api.github.com/repos/bhanuraina/test_nodejs/actions/runs
+          #steps:
       - uses: actions/checkout@v3
     
       - name: run kubeaudit
