--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -12,16 +12,19 @@ jobs:
     name: Test Step
     runs-on: ubuntu-latest
     steps:
-       run: |
-         apt install curl tar 
+      - name: install
+        shell: bash
+        run: |
+          apt install curl tar 
        #   curl -L \
        #   -H "Accept: application/vnd.github+json" \
         #  -H "Authorization: Bearer ${{secrets.GITHUB_TOKEN}}" \
          # -H "X-GitHub-Api-Version: 2022-11-28" \
           #  https://api.github.com/repos/bhanuraina/test_nodejs/actions/runs
           #steps:
+          
       - uses: actions/checkout@v3
-    
+      
       - name: run kubeaudit
         uses: klustair/kubeaudit-action@v1.0
         with:
