--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -41,9 +41,9 @@ jobs:
         run: |
           echo ">>> Creating manifest.yml with ${HELM_CMD}"
           IFS=" "
-          for chart in ./charts ; do
-            ${HELM_CMD} template ${chart} >> manifest.yaml
-          done
+          #for chart in ./charts ; do
+            ${HELM_CMD} template ./charts >> manifest.yaml
+          #done
           IFS=","
           cmds="image,rootfs,limits"
           for command in $cmds; do
