--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -48,6 +48,8 @@ jobs:
           cmds="image,rootfs,limits"
           for command in $cmds; do
             echo ">>> Executing kubeaudit command ${command}"
+            ./kubeaudit help
+            ./kubeaudit audit
             ./kubeaudit ${command} true pretty info  \
               -f manifest.yaml >> ${command}.log || RESULT="FAIL"
             if [ "${RESULT}" == "FAIL" ]; then
