--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,65 +1,12 @@
 apiVersion: v1
-kind: ConfigMap
+kind: Pod
 metadata:
-  name: release-name-nginx-server-block
+  name: pod
+  namespace: host-network-true-allowed
   labels:
-    app.kubernetes.io/name: nginx
-    helm.sh/chart: nginx-8.9.0
-        app.kubernetes.io/managed-by: Helm
-    spec:
-      
-      serviceAccountName: default
-      affinity:
-        podAffinity:
-          
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - podAffinityTerm:
-                labelSelector:
-                  matchLabels:
-                    app.kubernetes.io/name: nginx
-                    app.kubernetes.io/instance: release-name
-                namespaces:
-                  - "gh-runners-server-production-telia-medium-docker"
-                topologyKey: kubernetes.io/hostname
-              weight: 1
-        nodeAffinity:
-          
-      containers:
-        - name: nginx
-          image: ittc1vhrtcp001.tc.vas.omnitel.it/tcp-shared/nginx:1.19.10-debian-10-r14
-          imagePullPolicy: "IfNotPresent"
-          env:
-            - name: BITNAMI_DEBUG
-              value: "false"
-          ports:
-            - name: http
-              containerPort: 8080
-          livenessProbe:
-            tcpSocket:
-              port: http
-            periodSeconds: 10
-            timeoutSeconds: 5
-            successThreshold: 1
-            failureThreshold: 6
-          readinessProbe:
-            tcpSocket:
-              port: http
-            initialDelaySeconds: 5
-            periodSeconds: 5
-            timeoutSeconds: 3
-            successThreshold: 1
-            failureThreshold: 3
-          resources:
-            limits: {}
-            requests: {}
-          volumeMounts:
-            - name: nginx-server-block-paths
-              mountPath: /opt/bitnami/nginx/conf/server_blocks
-      volumes:
-        - name: nginx-server-block-paths
-          configMap:
-            name: release-name-nginx-server-block
-            items:
-              - key: server-blocks-paths.conf
-                path: server-blocks-paths.conf
+    kubeaudit.io/allow-namespace-host-network: "SomeReason"
+spec:
+  hostNetwork: true
+  containers:
+    - name: container
+      image: scratch
