--- a/.github/workflows/monitor.yml
+++ b/.github/workflows/monitor.yml
@@ -41,6 +41,8 @@ jobs:
         run: |
           echo ">>> Creating manifest.yml with "
           echo "here it is" 
+          pwd 
+          ls -ltr
           ./kubeaudit all  true pretty info -k ./kubeaudit-config.yml \
               -f ./manifest.yaml 
            
